Completed First Version Required End To End Testing

--- a/codebase/5656b80dcfe43.html
+++ b/codebase/5656b80dcfe43.html
@@ -2,18 +2,12 @@
 <head>
 <script>
 
-
-
-
 </script>
 <style>
-body { background:grey; }
 
 </style>
 </head>
 <body>
-this is a text code
-asdfasdf
-
+hiiiiiiiii
 </body>
 </html>
