--- a/codebase/565714f90e2c7.html
+++ b/codebase/565714f90e2c7.html
@@ -2,18 +2,14 @@
 <head>
 <script>
 
-
-
-
 </script>
 <style>
-body { background:grey; }
-
+body { 
+background:red;
+}
 </style>
 </head>
 <body>
-this is a text code
-asdfasdf
-
+hi
 </body>
 </html>
